[workspace]
members = [
  "auth",
  "dispatch",
  "firestore/value",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", default-features = false }
headers = "0.3"
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-rustls = { version = "0.24", features = ["http2", "webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
tokio = "1"
tower = { version = "0.4", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
