[workspace]
members = [
  "auth",
  "firestore/value",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
http-dispatch = { git = "https://github.com/Hakuyume/http-dispatch-rs.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
tokio = "1"
tower = { version = "0.4", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
