[package]
name = "google-cloud-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
http-dispatch.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "sync"] }
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
http-dispatch = { workspace = true, features = ["hyper"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
