[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
headers.workspace = true
http.workspace = true
http-body.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tower = { workspace = true, features= ["buffer", "util"] }
