[package]
name = "google-cloud-firestore-value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_with = { workspace = true, features = ["base64"] }

[dev-dependencies]
serde_json.workspace = true
